Fix sources pane and accordion overflow (#1246)

--- a/src/devtools/client/debugger/src/components/PrimaryPanes/Sources.css
+++ b/src/devtools/client/debugger/src/components/PrimaryPanes/Sources.css
@@ -19,6 +19,7 @@
   display: flex;
   flex: 1;
   flex-direction: column;
+  overflow-x: auto;
 }
 
 .sources-list .img.blackBox {
